[pep8] Exclude doc/, ve/ and ve3/

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,14 @@
 [pytest]
-flakes-ignore = UnusedImport
-pep8ignore = 
+flakes-ignore =
+    UnusedImport
+    UndefinedName
+pep8ignore =
     tests/*.py ALL
     doc/_themes/flask_theme_support.py ALL
 
 [flake8]
 #ignore=E128,E261
+exclude=ve/,doc/,ve3/
 
 [metadata]
 license-file = LICENSE
